change user name

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ markdown: kramdown
 
 # Author Info
 author:
-  name     : John Doe
+  name     : Rabi shankar
   image    : https://i2.cdn.turner.com/cnnnext/dam/assets/140926165711-john-sutter-profile-image-large-169.jpg
   email    : username@xyz.com
   github   : username
