--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: rabi shankar
 description: >- # this means to ignore newlines until "baseurl:"
   Always code as if the guy who ends up maintaining your code
   will be a violent psychopath who knows where you live.
-baseurl: ""  # the subpath of your site, e.g. /blog
+baseurl: "/rabishankar"  # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 repository: YoussefRaafatNasry/portfolYOU
 
