add profile image

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown: kramdown
 # Author Info
 author:
   name     : Rabi shankar
-  image    : https://i2.cdn.turner.com/cnnnext/dam/assets/140926165711-john-sutter-profile-image-large-169.jpg
+  image    : https://github.com/rabi-shankar/rabishankar/blob/master/images/rabi.jpeg
   email    : username@xyz.com
   github   : username
   twitter  : username
