--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown: kramdown
 # Author Info
 author:
   name     : Rabi shankar
-  image    : https://github.com/rabi-shankar/rabishankar/blob/master/images/rabi.jpg
+  image    : https://github.com/rabi-shankar/rabishankar/blob/master/images/rabi.png
   email    : username@xyz.com
   github   : username
   twitter  : username
