--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown: kramdown
 # Author Info
 author:
   name     : Rabi shankar
-  image    : https://github.com/rabi-shankar/rabishankar/blob/master/images/rabi.png
+  image    : http://rshankarmandi.weebly.com/uploads/2/0/5/8/20582714/rabi_1_orig.png
   email    : username@xyz.com
   github   : username
   twitter  : username
