--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 # Site settings
 title: Rabi Shankar
 description: >- # this means to ignore newlines until "baseurl:"
-  Always code as if the guy who ends up maintaining your code
-  will be a violent psychopath who knows where you live.
+ I am a person who is positive about every aspect of life.
+
+Thinker   |     Learner    |    Developer
 baseurl: "/rabishankar"  # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 repository: YoussefRaafatNasry/portfolYOU
