--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,11 @@ description: >- # this means to ignore newlines until "baseurl:"
  I am a person who is positive about every aspect of life.
 
 Thinker   |     Learner    |    Developer
+```javascript
+ I am a person who is positive about every aspect of life.
+
+Thinker   |     Learner    |    Developer
+```
 baseurl: "/rabishankar"  # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 repository: YoussefRaafatNasry/portfolYOU
